--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Omar's Bio</a>
+				<a href="bio.html" class="title">Omar's Bio</a>
 				<nav>
 					<ul>
             <a href="index.html" class="button small">Back to Home</a>
@@ -49,14 +49,14 @@
 
 			</div>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+      <!-- Footer -->
+  			<footer id="footer" class="wrapper style-alt">
+  				<div class="inner">
+  					<ul class="menu">
+  						<li>Omar Ganai lives in Toronto, Canada. <img src="images/canada.png" width="22px" height="11px"></li>
+  					</ul>
+  				</div>
+  			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
