--- a/bio.html
+++ b/bio.html
@@ -21,7 +21,7 @@
 				<a href="bio.html" class="title">Omar's Bio</a>
 				<nav>
 					<ul>
-            <a href="index.html" class="button small">Back to Home</a>
+          <li>  <a href="index.html" class="button small">Back to Home</a></li>
 					</ul>
 				</nav>
 			</header>
