--- a/bio.html
+++ b/bio.html
@@ -20,9 +20,8 @@
 			<header id="header">
 				<a href="bio.html" class="title">Omar's Bio</a>
 				<nav>
-					<ul>
-          <li>  <a href="index.html" class="button fit small">Back to Home</a></li>
-					</ul>
+<a href="index.html" class="button small">Back to Home</a>
+
 				</nav>
 			</header>
 
