--- a/bio.html
+++ b/bio.html
@@ -18,11 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="bio.html" class="title">Omar's Bio</a>
-				<nav>
-<a href="index.html" class="button small">Back to Home</a>
-
-				</nav>
+<a href="index.html" class="button fit">Home</a>
 			</header>
 
 		<!-- Wrapper -->
