--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<nav><a href="index.html" class="button fit small">Back to Home</a></nav>
+				<nav><a href="index.html" class="button fit">Back to Home</a></nav>
 			</header>
 
 		<!-- Wrapper -->
