--- a/bio.html
+++ b/bio.html
@@ -33,7 +33,7 @@
               </p>
 
               <h2 class="major"><span class="icon fa-coffee"> Personal Bio</h2>
-              <span class="image right" ><img style="filter: grayscale(100%)" src="images/omar2.jpg" alt=""/></span>
+              <span class="image left" ><img style="filter: grayscale(100%)" src="images/omar2.jpg" alt=""/></span>
               <p>
 
                 I'm an expert in the practical application of Motivation and Behavior Change Science. I've made companies, products, and services that have helped thousands of people change their behavior. Born in Lahore, Pakistan, I grew up in the Middle East (Saudi Arabia, Bahrain, the U.A.E.), North American states (Minnesota and California) and Canadian provinces (Alberta and Ontario). I currently reside in Toronto, Canada. I enjoy being a bro at the gym, reading heavy philosophical books, attending electronic music festivals, and trying to win the affection of my 3 year old niece.</p>
