--- a/bio/index.html
+++ b/bio/index.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Omar Ganai - Bio</title>
+		<title>Omar Ganai</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -19,7 +19,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<nav><a href="index.html" class="button fit">Back to Home</a></nav>
+				<a href="index.html" class="title">Omar Ganai</a>
+				<nav>
+					<ul>
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="../bio.html" class="active">Bio</a></li>
+					</ul>
+				</nav>
 			</header>
 
 		<!-- Wrapper -->
@@ -29,12 +35,12 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h2 class="major"><span class="icon fa-briefcase"></span> Professional Bio</h2>
-							<span class="image left"><img src="images/omar.jpg" alt="" /></span>
+							<span class="image left"><img src="../images/omar.jpg" alt="" /></span>
               <p>I'm a Product Manager & Consultant at <a href="http://habitry.com">Habitry</a>, a behavior change consulting company I helped build in 2014. I have a M.A. and "all but dissertation PhD" in Organizational Psychology from the University of Waterloo, and a B.A. with honors in Psychology from San José State University. My area of study was the social psychology of motivation, with a focus on improving satisfaction and productivity in workplace social systems (such as teams and communities). While in academia I started to feel a gap between what I was studying and how behavior change is actually implemented in organizations. So I left to become a Business Analyst at Cisco Systems (a Fortune 100 company). There, I got a taste of how to orchestrate behavior change across teams and organizations. Feeling more ambitious, I left Cisco to help build Habitry. Since then, I've been working to bridge the gap between Behavior Change Science and its practical applications in business and technology. I'm currently writing <em>Motivating Humans: The Science and Lore of Behavior Change</em> with Steven M. Ledbetter.
               </p>
 
               <h2 class="major"><span class="icon fa-coffee"> Personal Bio</h2>
-              <span class="image left" ><img style="filter: grayscale(100%)" src="images/omar2.jpg" alt=""/></span>
+              <span class="image left" ><img style="filter: grayscale(100%)" src="../images/omar2.jpg" alt=""/></span>
               <p>
 
                 I'm an expert in the practical application of Motivation and Behavior Change Science. I've made companies, products, and services that have helped thousands of people change their behavior. Born in Lahore, Pakistan, I grew up in the Middle East (Saudi Arabia, Bahrain, the U.A.E.), North American states (Minnesota and California) and Canadian provinces (Alberta and Ontario). I currently reside in Toronto, Canada. I enjoy being a bro at the gym, reading heavy philosophical books, attending electronic music festivals, and trying to win the affection of my 3 year old niece.</p>
