--- a/bio/index.html
+++ b/bio/index.html
@@ -22,8 +22,8 @@
 				<a href="index.html" class="title">Omar Ganai</a>
 				<nav>
 					<ul>
-						<li><a href="../index.html">Home</a></li>
-						<li><a href="../bio.html" class="active">Bio</a></li>
+						<li><a class="button" href="../index.html">Home</a></li>
+						<li><a class="button" href="../bio.html" class="active">Bio</a></li>
 					</ul>
 				</nav>
 			</header>
