--- a/bio/index.html
+++ b/bio/index.html
@@ -19,11 +19,10 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Omar Ganai</a>
 				<nav>
 					<ul>
-						<li><a class="button small" href="../index.html">Home</a></li>
-						<li><a class="button small special" href="../bio.html">Bio</a></li>
+						<li><a class="button small fit" href="../index.html">Home</a></li>
+						<li><a class="button special small fit" href="../bio.html">Bio</a></li>
 					</ul>
 				</nav>
 			</header>
