--- a/bio/index.html
+++ b/bio/index.html
@@ -21,10 +21,9 @@
 			<header id="header">
 				<nav>
 					<ul>
-						<li><a class="button small fit" href="../index.html">Home</a></li>
-						<li><a class="button special small fit" href="../bio.html">Bio</a></li>
+						<li><a class="button small fit" href="../">Home</a></li>
+						<li><a class="button special small fit" href="../bio">Bio</a></li>
 					</ul>
-
 				</nav>
 			</header>
 
