--- a/bio/index.html
+++ b/bio/index.html
@@ -19,7 +19,6 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a style="text-decoration: none;" href="../">Omar Ganai</a></h1>
 				<nav>
 					<ul>
 						<li><a class="button small fit" href="../">Home</a></li>
@@ -34,7 +33,7 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major"><span class="icon fa-briefcase"></span> Professional Bio</h2>
+							<h1 class="major"><span class="icon fa-briefcase"></span> Business Bio</h2>
 							<span class="image left"><img src="../images/omar.jpg" alt="" /></span>
               <p>I'm a Product Manager & Consultant at <a href="http://habitry.com">Habitry</a>, a behavior change consulting company I helped build in 2014. I have a M.A. and "all but dissertation PhD" in Organizational Psychology from the University of Waterloo, and a B.A. with honors in Psychology from San José State University. My area of study was the social psychology of motivation, with a focus on improving satisfaction and productivity in workplace social systems (such as teams and communities). While in academia I started to feel a gap between what I was studying and how behavior change is actually implemented in organizations. So I left to become a Business Analyst at Cisco Systems (a Fortune 100 company). There, I got a taste of how to orchestrate behavior change across teams and organizations. Feeling more ambitious, I left Cisco to help build Habitry. Since then, I've been working to bridge the gap between Behavior Change Science and its practical applications in business and technology. I'm currently writing <em>Motivating Humans: The Science and Lore of Behavior Change</em> with Steven M. Ledbetter.
               </p>
