--- a/bio/index.html
+++ b/bio/index.html
@@ -54,7 +54,7 @@
   			<footer id="footer" class="wrapper style-alt">
   				<div class="inner">
   					<ul class="menu">
-  						<li>Omar Ganai lives in Toronto, Canada. <img src="images/canada.png" width="22px" height="11px"></li>
+  						<li>Omar Ganai lives in Toronto, Canada. <img src="../images/canada.png" width="22px" height="11px"></li>
   					</ul>
   				</div>
   			</footer>
