--- a/bio/index.html
+++ b/bio/index.html
@@ -19,10 +19,11 @@
 
 		<!-- Header -->
 			<header id="header">
+				<a href="../" class="title">Omar Ganai</a>
 				<nav>
 					<ul>
-						<li><a class="button small fit" href="../">Home</a></li>
-						<li><a class="button special small fit" href="../bio">Bio</a></li>
+						<li><a href="../">Home</a></li>
+						<li><a class="active" href="../bio">Bio</a></li>
 					</ul>
 				</nav>
 			</header>
