--- a/bio/index.html
+++ b/bio/index.html
@@ -32,7 +32,7 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="main" class="wrapper style2 fullscreen fade-up">
 						<div class="inner">
 							<h1 class="major"><span class="icon fa-briefcase"></span> Business Bio</h2>
 							<span class="image left"><img src="../images/omar.jpg" alt="" /></span>
