--- a/bio/index.html
+++ b/bio/index.html
@@ -32,7 +32,7 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper style2 fullscreen fade-up">
+					<section id="main" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1 class="major"><span class="icon fa-briefcase"></span> Business Bio</h2>
 							<span class="image left"><img src="../images/omar.jpg" alt="" /></span>
@@ -52,7 +52,7 @@
 			</div>
 
       <!-- Footer -->
-  			<footer id="footer" class="wrapper style-alt">
+  			<footer id="footer" class="wrapper style1">
   				<div class="inner">
   					<ul class="menu">
   						<li>Omar Ganai lives in Toronto, Canada. <img src="../images/canada.png" width="22px" height="11px"></li>
