--- a/bio/index.html
+++ b/bio/index.html
@@ -52,7 +52,7 @@
 			</div>
 
       <!-- Footer -->
-  			<footer id="footer" class="wrapper style1">
+  			<footer id="footer" class="wrapper style-alt">
   				<div class="inner">
   					<ul class="menu">
   						<li>Omar Ganai lives in Toronto, Canada. <img src="../images/canada.png" width="22px" height="11px"></li>
